# docxtools

./: Cargo.toml  README.md  build.rs  code-coverage.sh  release_build.sh  release_build_linux.sh
.circleci/: config.yml
.github/workflows/: rust.yml
src/: file_util.rs  lib.rs  main.rs  xml_util.rs  zip_util.rs
src/test/: test_doc1.docx
src/test/test_tree2/word/: document.xml  some_random_file.txt
src/test/test_tree2/word/_rels/: document.xml.rels
src/test/test_tree4/docProps/: app.xml  core.xml
src/test/test_tree4/word/: document.xml  fontTable.xml  numbering.xml  settings.xml  styles.xml
src/test/test_tree4/word/_rels/: document.xml.rels
src/test/test_tree5/docProps/: app.xml  core.xml
src/test/test_tree5/word/: document.xml  fontTable.xml  settings.xml  styles.xml
src/test/test_tree6/docProps/: app.xml  core.xml
src/test/test_tree6/word/: document.xml  fontTable.xml  settings.xml  styles.xml
src/test/test_tree7/: [Content_Types].xml
src/test/test_tree7/word/: document2.xml
src/test/test_tree7/word/_rels/: document2.xml.rels
