[package]
name = "docxtools"
version = "0.3.0"
edition = "2021"

[dependencies]
regex = "1.9"
tempfile = "3.8"
zip = "0.6"
walkdir = "2.3"
xml_dom = "0.2"
unicode-bom = "2.0"
clap = { version = "4.3.19", features = ["derive"] }

[dev-dependencies]
gag = "1.0"
serial_test = "2.0"
testdir = "0.8"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1
strip = true

[[bin]]
name = "docxtools"
path = "src/bin/main.rs"
