[package]
name = "docxtools"
version = "0.9.0"
edition = "2021"
authors = ["David Bosschaert <david.bosschaert@gmail.com>"]
license = "Apache-2.0"
description = "A command-line tool to work with docx files, for example to make bulk-changes in them without the need to open a word processor."
readme = "README.md"
keywords = ["cli", "docx"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.9"
tempfile = "3.8"
zip = "2.2.1"
walkdir = "2.3"
unicode-bom = "2.0"
clap = { version = "4.3.19", features = ["derive"] }
quick-xml = "0.31"
uuid = { version = "1.6", features = ["v4"] }
unicase = "2.7"

[dev-dependencies]
gag = "1.0"
serial_test = "2.0"
testdir = "0.8"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1
strip = true

[[bin]]
name = "docxtools"
path = "src/bin/main.rs"
